--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,1 +1,11 @@
-<p>spinner works!</p>
+<ngx-spinner
+  bdColor="rgba(15, 20, 35, 0.8)"
+  size="medium"
+  color="#00E0FF"
+  type="ball-pulse-sync"
+  [fullScreen]="true">
+<p class="spinner-text" style="color:#ffffff;font-size:18px;font-weight:600;">
+  Cargando
+</p>
+
+</ngx-spinner>
