--- a/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-diezmos.component.html
+++ b/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-diezmos.component.html
@@ -1,20 +1,21 @@
 <div class="dz">
   <div class="dz__header">DIEZMOS</div>
 
-  <section class="kpis">
-    <div class="kpi purple">
-      <label>Total Ingresos</label>
-      <div class="val">Q {{ totIngresos | number:'1.2-2' }}</div>
-    </div>
-    <div class="kpi teal">
-      <label>Total Egresos</label>
-      <div class="val">Q {{ totEgresos | number:'1.2-2' }}</div>
-    </div>
-    <div class="kpi orange">
-      <label>Saldo disponible</label>
-      <div class="val">Q {{ totSaldo | number:'1.2-2' }}</div>
-    </div>
-  </section>
+<section class="kpis-row">
+  <div class="kpi purple">
+    <div class="kpi-title">Total Ingresos</div>
+    <div class="kpi-val">Q {{ totIngresos | number:'1.2-2' }}</div>
+  </div>
+  <div class="kpi teal">
+    <div class="kpi-title">Total Egresos</div>
+    <div class="kpi-val">Q {{ totEgresos | number:'1.2-2' }}</div>
+  </div>
+  <div class="kpi orange">
+    <div class="kpi-title">Saldo disponible</div>
+    <div class="kpi-val">Q {{ totSaldo | number:'1.2-2' }}</div>
+  </div>
+</section>
+
 
   <div class="toolbar">
     <button class="btn btn--primary" (click)="openAdd()">+ Agregar Ingresos / Egresos</button>
