--- a/src/app/components/spinner/spinner.component.scss
+++ b/src/app/components/spinner/spinner.component.scss
@@ -24,4 +24,15 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
-  
+  ::ng-deep .ngx-spinner-overlay { z-index: 2000 !important; }
+.spinner-text::after {
+  content: '';
+  animation: dots 1.5s steps(5, end) infinite;
+}
+
+@keyframes dots {
+  0%, 20% { content: ''; }
+  40% { content: '.'; }
+  60% { content: '..'; }
+  80%, 100% { content: '...'; }
+}
