--- a/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-add-diezmo/dialog-add-diezmo.component.html
+++ b/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-add-diezmo/dialog-add-diezmo.component.html
@@ -59,15 +59,16 @@
   <!-- Control oculto obligatorio para enviar el id -->
   <input type="hidden" formControlName="personaId" />
 
-  <!-- Cantidad -->
-  <mat-form-field appearance="outline" class="w-full">
-    <mat-label>Cantidad</mat-label>
-    <span matPrefix>Q&nbsp;</span>
-    <input matInput type="number" step="0.01" formControlName="cantidad" />
-    <mat-error *ngIf="form.controls.cantidad.invalid && form.controls.cantidad.touched">
-      Ingresa un monto válido
-    </mat-error>
-  </mat-form-field>
+<!-- Cantidad -->
+<mat-form-field appearance="outline" class="w-full amt-field">
+  <mat-label>Cantidad</mat-label>
+  <span matPrefix>Q&nbsp;</span>
+  <input matInput type="number" step="0.01" formControlName="cantidad" />
+  <mat-error *ngIf="form.controls.cantidad.invalid && form.controls.cantidad.touched">
+    Ingresa un monto válido
+  </mat-error>
+</mat-form-field>
+
 
   <!-- Fecha -->
   <mat-form-field appearance="outline" class="w-full">
